--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
   "name": "thomas-mcevoy.com",
+  "homepage": "https://thomas-mcevoy.com",
   "private": true,
-  "version": "4.0.7",
+  "version": "4.0.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npx gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "svelte": "^4.0.5",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
